# solar-sim-workspace

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  TASKS.md  rust-toolchain.toml
assets/: catalog.ron  catalog.sample.ron  starfield-SOURCE.md  starfield.bsc
crates/solar-sim/: Cargo.toml
crates/solar-sim/src/: apparent_size.rs  control.rs  formatting.rs  frame_stats.rs  golden.rs  help.rs  input_intent.rs  labels.rs  layers.rs  left_panel.rs  lib.rs  main.rs  native_error_surface.rs  orbit_lines.rs  platform.rs  scene_polish.rs  search.rs  selection.rs  settings.rs  starfield.rs  steam_app_id.rs  surface_textures.rs  time_bar.rs
crates/solar-sim/src/ui_kit/: gallery.rs  hud.rs  mod.rs  navigation.rs  test_layout.rs  theme.rs  widgets.rs
docs/: body-description-review-2026-07-23.md  codex-review-and-closure-plan-2026-07-24.md  codex-uip9-d5-surface-gate.md  decision-record-2026-07-22.md  dwarf-surface-appearance-2026-07-23.md  game-design-notes-2026-07-22.md  open-questions-brief-2026-07-12.md  orbit-palette-review-2026-07-23.md  playability-review-and-rulings-2026-07-23.md  project-status-audit-2026-07-18.md  status-review-2026-07-22.md  ui-gameplay-architecture-conformance-2026-07-17.md  ui-gameplay-bug-audit-2026-07-17.md  wp0-dev-setup-macos.md  (+10 more)
xtask/: AGENTS.md  Cargo.toml
xtask/fixtures/: 3i_atlas.json  ceres.json  earth.json  halley.json  moon.json
xtask/fixtures/captured-2026-07/: 3i_atlas.json  amalthea.json  apophis.json  ariel.json  bennu.json  callisto.json  ceres.json  charon.json  churyumov_gerasimenko.json  deimos.json  dione.json  dysnomia.json  dysnomia.lookup.json  earth.json  enceladus.json  encke.json  eris.json  eros.json  europa.json  ganymede.json  gonggong.json  hale_bopp.json  halley.json  hartley_2.json  haumea.json  hiiaka.json  hiiaka.lookup.json  himalia.json  hydra.json  hygiea.json  hyperion.json  iapetus.json  io.json  juno.json  jupiter.json  makemake.json  mars.json  mercury.json  mimas.json  miranda.json  (+28 more)
xtask/fixtures/spotcheck/: catalog.ron  vectors.json
xtask/src/: emit.rs  fetch.rs  golden.rs  horizons.rs  lib.rs  lookup.rs  main.rs  manifest.rs  normalize.rs  palette.rs  perf.rs  sbdb.rs  starfield.rs  steam.rs  texture.rs
xtask/tests/: smoke.rs  spotcheck.rs
(+31 files in other folders)
