[package]
name = "solar-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
sim-core = { path = "../sim-core" }
# "0.19" + committed Cargo.lock = pinned to an exact 0.19.x patch,
# patch upgrades are a deliberate `cargo update -p bevy` (ARCHITECTURE §8.1).
bevy = { version = "0.19", features = ["bevy_settings"] }
steamworks = { version = "0.13.1", optional = true }

[dev-dependencies]
# Test-only proof that the complete reflected settings schema round-trips.
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[features]
# Fast local iteration; NEVER enabled in CI or release builds.
dev = ["bevy/dynamic_linking"]
steam = ["dep:steamworks"]
